--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -98,7 +98,7 @@ noscript div {
 
 #title {
     display: block;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 18px;
     margin-left: 30px;
     /* text-shadow: 1px 1px 1px #000; */
@@ -117,10 +117,15 @@ noscript div {
     margin-top: 60px;
 }
 
+#cycleNum {
+    display: block;
+    margin: auto;
+    font-size: 1.5rem;
+}
+
 #phaseDisplay {
     display: inline-block;
     margin: auto;
-    /* margin: 70px 0px 30px 0px; */
     text-shadow: 1px 1px 1px #000;
     font-size: 40px;
 }
@@ -142,6 +147,7 @@ noscript div {
     top: 3%;
     right: 5%; */
     float : right;
+    width: 85%;
 }
 #settingsIcon:hover {
     animation: text_reveal .5s ease forwards;
@@ -352,7 +358,7 @@ noscript div {
     border: 5px solid #000;
     border-radius: 50px 50px 50px 50px;
     box-shadow: inset 0 -1px 10px 3px #6d6d6d;
-    font-size: 38px;
+    font-size: 31px;
     z-index: 999;
 }
 
@@ -690,10 +696,6 @@ input {
 #chooseTheme button{
     font-size: 18px;
     margin: 0 0;
-}
-
-#cycleNum {
-    font-size: 1.5rem;
 }
 
 #cycle1 {
