change notification size

--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -271,7 +271,7 @@ noscript div {
     margin-bottom: 10px;
     min-height: 30px;
     font-size: 1.3rem;
-    font-weight: bold;
+    font-weight: 400;
 }
 
 @media screen and (max-width: 479px) {
