--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -73,7 +73,7 @@ p {
     animation: text_reveal .5s ease forwards;
 }
 noscript {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     height: 100%;
@@ -84,7 +84,7 @@ noscript {
 
 noscript div {
     padding: 20px 40px;
-    font-size: 2.25rem;
+    font-size: 2rem;
 }
 /*---------------------------------
          Main Page Display
